--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  
 <body>
   <h1>Finnic</h1>
-  <p>Welcome to my website!</p>
+  <p>Welcome to my website! Gach has the thick bootaaayyyyy</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
