--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
  
 <body>
-  <h1>Finnic</h1>
+  <h1>Finnic Creations TEST site</h1>
   <p>Welcome to my website! Gach has the thick bootaaayyyyy</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
